Fix align

--- a/src/scss/home-page/03-dashboard.scss
+++ b/src/scss/home-page/03-dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard {
-  margin-bottom: 25px;
+  margin-bottom: 40px;
 
   .container {
     padding-top: 45px;
