--- a/src/scss/layout/layout.scss
+++ b/src/scss/layout/layout.scss
@@ -39,7 +39,6 @@ body {
     .container {
       padding-top: 30px;
       padding-bottom: 30px;
-      text-align: center;
 
       li { text-align: left; }
 
@@ -62,7 +61,6 @@ body {
         .content {
           position: relative;
           z-index: 3;
-          text-align: center;
           max-width: none;
         }
       }
